k8s-security-framework/policies/metadata/KSP-META-001/KSP-META-001-require-app-label.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-app-label
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/id: ksp-meta-001
  annotations:
    policies.kyverno.io/title: Require App Label
    policies.kyverno.io/category: KSP Metadata
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Workload
    policies.kyverno.io/description: Requires the Kubernetes recommended application name label.
    policies.ksp.io/profiles: baseline,standard,restricted
    policies.ksp.io/dev-mode: Audit
    policies.ksp.io/staging-mode: Audit
    policies.ksp.io/prod-mode: Enforce
    policies.ksp.io/exception: limited
spec:
  evaluation:
    background:
      enabled: true
  failurePolicy: Fail
  webhookConfiguration:
    timeoutSeconds: 10
  validationActions:
  - Audit
  - Warn
  matchConstraints:
    resourceRules:
    - apiGroups:
        - apps
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - deployments
        - statefulsets
        - daemonsets

    - apiGroups:
        - batch
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - jobs
        - cronjobs
  validations:
  - expression: object.metadata.?labels['app'].orValue('') != ''
    message: Add metadata.labels.app with a meaningful application name.
